Changelog
=========

0.4.4
-----
- add TreeStableTimer configurability. This avoids to create one build per commit but rather one build per push/merge.

0.4.3
-----
- upgrade compatibility fixes. Fix case were tags are duplicated in the config

0.4.2
-----
- README fixes for pypi page

0.4.1
-----
- Minor dependencies fix to create a stable docker container

0.4.0
-----
- Support for Hyper latent workers
- Support for admin authentiation
- Support for GitHub Pull requests

0.3.0
-----
- Support for configuration of workers and auth via administration UI

0.1.1
-----
Release of buildbot_travis based on buildbot nine beta1

Basic support for github

0.1.0
-----
First release of buildbot_travis based on buildbot nine
This version was hard to use as buildbot nine was not available in pip

0.0.19 (unreleased)
-------------------

- Nothing changed yet.


0.0.18 (2012-11-12)
-------------------

- Fix borked release.


0.0.17 (2012-11-12)
-------------------

- Update to use the latest trigger API (as it was changed in 0.8.7).

- Add web UI for registering new projects.


0.0.16 (2012-11-01)
-------------------

- Remove the ``name`` args from the pollers - they were removed in time for 0.8.7.


0.0.15 (2012-11-01)
-------------------

- Now fully support the ``matrix`` options allowing finer control over the
  implied matrix generated from the list of runtimes and environment
  variables::

      python:
        - 2.6
        - 2.7
      env:
        - FLAVOUR=apple
        - FLAVOUR=orange
      matrix:
        exclude:
          - python: 2.7
            env: FLAVOUR=orange
        include:
          - python: 2.7
            env: FLAVOUR=banana

  This will do an additional build of the ``banana`` build but only for python
  2.7. And it will turn off the build for the ``orange`` flavour, again only
  for python 2.7.

- Mail notification can't send a change notification if it doesn't have
  anything to compare to (to detect the change). So it doesn't try to.

